# microcredentials

Wdrazanie_modeli_AI/Krzysztof_Glogowski/: README.md  pyproject.toml
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/common/src/common/: collators.py  converters.py  image_transformers.py  input_file_validator.py  torch_utils.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/invoice_generator/src/: Makefile
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/invoice_generator/src/invoice_generator/: pdf_generator.py  pdf_to_jpg_converter.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/invoice_generator/src/invoice_generator/data_generator/: data_generator.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/invoice_generator/src/invoice_generator/model/: model.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/invoice_generator/src/invoice_generator/pdf_generator/: invoice_generator_provider.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/ml_pipelines/: Makefile  README.md
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/ml_pipelines/conf/: logging.yaml
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/ml_pipelines/conf/base/: catalog.yml  parameters.yml  parameters_data_preprocessing.yml  parameters_nn_model_inference.yml  parameters_nn_model_training.yml
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/ml_pipelines/notebooks/: nn_classification.ipynb
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/ml_pipelines/src/: datasets.py  hooks.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/ml_pipelines/src/ml_pipelines/: classification_report.py  early_stopper.py  file_system_utils.py  logger.py  models.py  pipeline_registry.py  settings.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/web_app/: Makefile  README.md
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/web_app/src/deploy/docker/: Dockerfile  Dockerfile-valkey  docker-compose.yaml  test.env
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/web_app/src/deploy/k8s/: application.yaml  certificate.yaml  clamav.yaml  cluster-issuer.yaml  config-map.yaml  deployment.yaml  gateway.yaml  horizontal-pod-autoscaler.yaml  namespace.yaml  service.yaml  valkey.yaml  virtual-service.yaml
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/web_app/src/tests/: conftest.py  fixture.py  utils_test.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/projects/web_app/src/web_app/: __init__.py  main.py
Wdrazanie_modeli_AI/Krzysztof_Glogowski/terraform/: backend.tf  main.tf  provider.tf  terraform.tfvars  variables.tf
Wdrazanie_modeli_AI/Krzysztof_Glogowski/terraform/envs/dev/: terraform.tfvars
Wdrazanie_modeli_AI/Krzysztof_Glogowski/terraform/envs/prod/: terraform.tfvars
Wdrazanie_modeli_AI/Krzysztof_Glogowski/terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
Wdrazanie_modeli_AI/Krzysztof_Glogowski/terraform/modules/gke/: main.tf  outputs.tf  variables.tf
(+57 files in other folders)
